k8s/base/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway
  namespace: rbih-payments
  labels:
    app: payment-gateway
spec:
  type: ClusterIP
  selector:
    app: payment-gateway
  ports:
    - name: http
      port: 8080
      targetPort: http
