k8s/base/processor-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payment-processor
  namespace: rbih-payments
  labels:
    app: payment-processor
spec:
  type: ClusterIP
  selector:
    app: payment-processor
  ports:
    - name: http
      port: 8080
      targetPort: http
