k8s/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payments
  namespace: rbih-payments
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: payments.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-gateway
                port:
                  number: 8080
